--- a/.github/workflows/update-rates.yml
+++ b/.github/workflows/update-rates.yml
@@ -21,6 +21,9 @@ on:
     
   workflow_dispatch: # Permite ejecutar manualmente
 
+permissions:
+  contents: write
+
 jobs:
   update:
     runs-on: ubuntu-latest
