--- a/.github/workflows/update-rates.yml
+++ b/.github/workflows/update-rates.yml
@@ -1,26 +1,19 @@
 name: Update Dollar Rates
 
-on:
+
   schedule:
-    # Horarios solicitados (UTC):
-    # Venezuela es UTC-4.
-    # 9:00 AM VET -> 1:00 PM UTC
-    # 12:00 PM VET -> 4:00 PM UTC
-    # 3:00 PM VET -> 7:00 PM UTC
-    # 4:00 PM to 7:00 PM VET (BCV check every 15 min) -> 8:00 PM to 11:00 PM UTC
-    # 9:00 PM VET -> 1:00 AM UTC (next day)
-    
-    # Binance updates
-    - cron: '0 13 * * *'  # 9am VET
-    - cron: '0 16 * * *'  # 12pm VET
-    - cron: '0 19 * * *'  # 3pm VET
-    - cron: '0 1 * * *'   # 9pm VET
+    - cron: '0 13 * * *'
+    - cron: '0 16 * * *'
+    - cron: '0 19 * * *'
+    - cron: '0 1 * * *'
+    - cron: '*/15 20-23 * * 1-5'
+
     
     # BCV Window (4pm - 7pm VET) Every 15 mins Mon-Fri
     - cron: '0 13 * * *'  # 9am VET
     - cron: '*/15 20-23 * * 1-5'
     
-  workflow_dispatch: # Permite ejecutar manualmente
+   workflow_dispatch:T # Permite ejecutar manualmente
 
 permissions:
   contents: write
