--- a/.github/workflows/update-rates.yml
+++ b/.github/workflows/update-rates.yml
@@ -2,6 +2,7 @@ name: Update Dollar Rates
 
 on:
   schedule:
+    - cron: '40 16 * * *'  # Ejecución de prueba a las 12:40 PM VET
     - cron: '0 12 * * *'
     - cron: '0 16 * * *'
     - cron: '0 19 * * *'
